# audio_editor

./: .cursorrules  .gitignore  README.md  ai_audio_editor_v2.py  audio_tools.py  pyproject.toml
audio_editor/: __init__.py
audio_editor/agents/: __init__.py  coordinator.py  critique_agent.py  dependencies.py  error_analyzer.py  executor.py  main.py  mcp.py  models.py  planner.py  prompts.py  qa_agent.py  user_feedback.py
audio_editor/audio_tools/: __init__.py  ai.py  config.py  effects.py  io.py  manipulation.py  utils.py  volume.py
docs/: markdown_schema.md  pydantic_ai_refactoring.md
tests/: conftest.py
tests/e2e/: test_audio_processing.py
tests/integration/: test_agent_interactions.py
tests/unit/: test_dependencies.py  test_markdown_utils.py  test_mcp.py  test_models.py
