[project]
name = "audio-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "audiomentations>=0.35.0",
    "diffusers>=0.32.2",
    "google-genai>=1.8.0",
    "google-generativeai>=0.8.4",
    "logfire>=3.11.0",
    "numpy==2.1.0",
    "pydantic-ai>=0.0.46",
    "pyloudnorm>=0.1.1",
    "pyroomacoustics>=0.8.3",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
]
